Reorganised to use routers and refactored to suit

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "BridgeApp",
     "slug": "BridgeApp",
+    "scheme": "BridgeApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
