--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bridgeapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
     "@expo/webpack-config": "~19.0.1",
-    "expo": "~50.0.7",
+    "@react-native/babel-preset": "^0.73.21",
+    "expo": "^50.0.8",
+    "expo-constants": "^15.4.5",
+    "expo-contacts": "^12.8.2",
+    "expo-linking": "^6.2.2",
     "expo-location": "^16.5.5",
-    "expo-status-bar": "~1.11.1",
+    "expo-router": "^3.4.8",
+    "expo-status-bar": "^1.11.1",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.8.1"
   },
