--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.1.6",
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native/babel-preset": "^0.73.21",
     "expo": "^50.0.8",
     "expo-constants": "^15.4.5",
@@ -18,6 +19,7 @@
     "expo-linking": "^6.2.2",
     "expo-location": "^16.5.5",
     "expo-router": "^3.4.8",
+    "expo-sms": "^11.7.1",
     "expo-status-bar": "^1.11.1",
     "install": "^0.13.0",
     "react": "18.2.0",
